@@ -1,5 +1,10 @@
 2007-08-10 Xavier Claessens  <xclaesse@gmail.com>
 
+	* libempathy-gtk/empathy-accounts-dialog.c: Unselect accounts when
+	clicking on "add" button. Fixes bug #459173 (Cosimo Cecchi).
+
+2007-08-10 Xavier Claessens  <xclaesse@gmail.com>
+
 	* libempathy-gtk/empathy-presence-chooser.glade: add some spacing in
 	"Custom message" dialog. Fixes bug #465360 (Frederic Peters).
 
